--- a/RaoulCore2/ClientApp/package.json
+++ b/RaoulCore2/ClientApp/package.json
@@ -26,10 +26,17 @@
     "@angular/platform-browser-dynamic": "^8.2.12",
     "@angular/platform-server": "8.2.12",
     "@angular/router": "^8.2.12",
+    "@fortawesome/angular-fontawesome": "^0.5.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.25",
+    "@ng-bootstrap/ng-bootstrap": "^5.1.2",
     "@nguniversal/module-map-ngfactory-loader": "^5.0.0-beta.5",
+    "angular-font-awesome": "^3.1.2",
     "aspnet-prerendering": "^3.0.1",
     "bootstrap": "^3.4.1",
     "core-js": "^3.3.4",
+    "font-awesome": "^4.7.0",
+    "fontawesome": "^5.6.3",
+    "ng-bootstrap": "^1.6.3",
     "rxjs": "^6.5.3",
     "tslib": "^1.10.0",
     "typescript": "^3.5.3",
