--- a/RaoulCore2/ClientApp/package.json
+++ b/RaoulCore2/ClientApp/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "RaoulCore2",
+  "name": "raoul-core2",
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
@@ -26,12 +26,14 @@
     "@angular/platform-browser-dynamic": "^8.2.12",
     "@angular/platform-server": "8.2.12",
     "@angular/router": "^8.2.12",
+    "@fortawesome/angular-fontawesome": "^0.5.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.25",
+    "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@ng-bootstrap/ng-bootstrap": "^5.1.2",
     "@nguniversal/module-map-ngfactory-loader": "^5.0.0-beta.5",
     "aspnet-prerendering": "^3.0.1",
     "bootstrap": "^4.3.1",
     "core-js": "^3.3.4",
-    "fontawesome": "^5.6.3",
     "ng-bootstrap": "^1.6.3",
     "rxjs": "^6.5.3",
     "tslib": "^1.10.0",
