--- a/RaoulCore2/ClientApp/angular.json
+++ b/RaoulCore2/ClientApp/angular.json
@@ -24,8 +24,7 @@
               "src/styles.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
-            "scripts": [
-            ]
+            "scripts": []
           },
           "configurations": {
             "production": {
